HTML、CSS、Readmeを追加した

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -221,9 +221,10 @@ th {
 }
 
 body {
-  background-color: #f4f4ff;
+  background-color: #fafafa;
+  // background-color: #f4f4ff;
   line-height: 1.5;
-  font-family: 'Roboto', 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'Roboto', 'Noto Sans JP', sans-serif;
 }
 
 main img {
