--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -30,3 +30,14 @@
 .dropdown-toggle {
   outline: 0;
 }
+
+header {
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba($color: #000000, $alpha: .2);
+}
+
+.header-dropdown-icon {
+  width: 42px;
+  height: 42px;
+  object-fit: cover;
+}
