--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,86 @@
-a
+<main class="articles">
+  <div class="outer container">
+    <div class="row">
+      <ul class="home-left col-4">
+        <li class="card mb-3 is-active">
+          <a href="">
+            <div class="card-body">
+              <h3 class="card-title">タイトルタイトル</h3>
+              <p class="card-text">テキストテキストテキストテキストテキストテキスト...</p>
+            </div>
+            <div class="card-footer">
+              <div class="card-footer-left">
+                <p>ユーザー名</p>
+                <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class="card mb-3">
+          <a href="">
+            <div class="card-body">
+              <h3 class="card-title">タイトルタイトル</h3>
+              <p class="card-text">テキストテキストテキストテキストテキストテキスト...</p>
+            </div>
+            <div class="card-footer">
+              <div class="card-footer-left">
+                <p>ユーザー名</p>
+                <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+              </div>
+            </div>
+          </a>
+        </li>
+      </ul>
+      <ul class="home-right col-8">
+        <li class="card mb-3">
+          <div class="card-body">
+            <h3 class="card-title">タイトルタイトル</h3>
+            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          </div>
+          <div class="card-footer">
+            <div class="card-footer-left">
+              <p>ユーザー名</p>
+              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+            </div>
+            <div class="card-footer-right">
+              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
+              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
+            </div>
+          </div>
+        </li>
+        <li class="card mb-3">
+          <div class="card-body">
+            <h3 class="card-title">タイトルタイトル</h3>
+            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          </div>
+          <div class="card-footer">
+            <div class="card-footer-left">
+              <p>ユーザー名</p>
+              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+            </div>
+            <div class="card-footer-right">
+              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
+              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
+            </div>
+          </div>
+        </li>
+        <li class="card mb-3">
+          <div class="card-body">
+            <h3 class="card-title">タイトルタイトル</h3>
+            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          </div>
+          <div class="card-footer">
+            <div class="card-footer-left">
+              <p>ユーザー名</p>
+              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+            </div>
+            <div class="card-footer-right">
+              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
+              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</main>
