--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,44 +2,32 @@
   <div class="outer container">
     <div class="row">
       <ul class="home-left col-4">
+      <% @articles.each do |article| %>
         <li class="card mb-3 is-active">
-          <a href="">
+          <%= link_to article_path(article) do %>
             <div class="card-body">
-              <h3 class="card-title">タイトルタイトル</h3>
-              <p class="card-text">テキストテキストテキストテキストテキストテキスト...</p>
+              <h3 class="card-title"><%= article.title %></h3>
+              <p class="card-text"><%= article.content %></p>
             </div>
             <div class="card-footer">
               <div class="card-footer-left">
-                <p>ユーザー名</p>
+                <p><%= User.find_by(id: article.user_id).name %></p>
                 <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
               </div>
             </div>
-          </a>
+          <% end %>
         </li>
-        <li class="card mb-3">
-          <a href="">
-            <div class="card-body">
-              <h3 class="card-title">タイトルタイトル</h3>
-              <p class="card-text">テキストテキストテキストテキストテキストテキスト...</p>
-            </div>
-            <div class="card-footer">
-              <div class="card-footer-left">
-                <p>ユーザー名</p>
-                <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-              </div>
-            </div>
-          </a>
-        </li>
+      <% end %>
       </ul>
       <ul class="home-right col-8">
         <li class="card mb-3">
           <div class="card-body">
-            <h3 class="card-title">タイトルタイトル</h3>
-            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            <h3 class="card-title"><%= @article.title %></h3>
+            <p class="card-text"><%= @article.content %></p>
           </div>
           <div class="card-footer">
             <div class="card-footer-left">
-              <p>ユーザー名</p>
+              <p><%= User.find_by(id: @article.user_id).name %></p>
               <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
             </div>
             <div class="card-footer-right">
