日本語対応、詳細ページ表示、記事作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
         <li><a href="#" class="nav-link link-dark px-2">ホーム</a></li>
         <li><a href="#" class="nav-link link-dark px-2">リンク</a></li>
         <li><a href="#" class="nav-link link-dark px-2">リンク</a></li>
-        <li><a href="#" class="nav-link link-dark px-2">投稿する</a></li>
+        <li><%= link_to '投稿する', new_article_path, class: 'nav-link link-dark px-2' %></li>
       </ul>
 
       <div class="dropdown text-end">
