--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,44 +1,14 @@
 <main class="articles">
   <div class="outer container">
     <div class="row">
+
       <ul class="home-left col-4">
-      <% @articles.each do |article| %>
-        <li class="card mb-3 is-active">
-          <%= link_to article_path(article) do %>
-            <div class="card-body">
-              <h3 class="card-title"><%= article.title %></h3>
-              <p class="card-text"><%= article.content %></p>
-            </div>
-            <div class="card-footer">
-              <div class="card-footer-left">
-                <p><%= User.find_by(id: article.user_id).name %></p>
-                <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-              </div>
-            </div>
-          <% end %>
-        </li>
-      <% end %>
+        <%= render 'shared/articles' %>
       </ul>
       <ul class="home-right col-8">
+        <%= render 'shared/article' %>
         <li class="card mb-3">
           <div class="card-body">
-            <h3 class="card-title"><%= @article.title %></h3>
-            <p class="card-text"><%= @article.content %></p>
-          </div>
-          <div class="card-footer">
-            <div class="card-footer-left">
-              <p><%= User.find_by(id: @article.user_id).name %></p>
-              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-            </div>
-            <div class="card-footer-right">
-              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
-              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
-            </div>
-          </div>
-        </li>
-        <li class="card mb-3">
-          <div class="card-body">
-            <h3 class="card-title">タイトルタイトル</h3>
             <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           </div>
           <div class="card-footer">
@@ -54,7 +24,6 @@
         </li>
         <li class="card mb-3">
           <div class="card-body">
-            <h3 class="card-title">タイトルタイトル</h3>
             <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           </div>
           <div class="card-footer">
