--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,13 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-floating">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
+
+      <div class="form-floating">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'floatingInput' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'%>
       </div>
 
       <div class="form-floating">
@@ -14,12 +19,12 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %>
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'floatingInput' %>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control'%>
       </div>
 
       <div class="form-floating">
         <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'floatingInput' %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'%>
       </div>
 
       <div class="actions w-100 btn btn-lg btn-primary">
