--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -46,6 +46,7 @@
   -ms-flex-align: center;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  box-shadow: none;
 }
 
 .modal__title {
