--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,42 +1,18 @@
 <main class="articles">
   <div class="outer container">
     <div class="row">
-
       <ul class="home-left col-4">
         <%= render 'shared/articles' %>
       </ul>
       <ul class="home-right col-8">
         <%= render 'shared/article' %>
-        <li class="card mb-3">
-          <div class="card-body">
-            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          </div>
-          <div class="card-footer">
-            <div class="card-footer-left">
-              <p>ユーザー名</p>
-              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-            </div>
-            <div class="card-footer-right">
-              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
-              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
-            </div>
-          </div>
-        </li>
-        <li class="card mb-3">
-          <div class="card-body">
-            <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          </div>
-          <div class="card-footer">
-            <div class="card-footer-left">
-              <p>ユーザー名</p>
-              <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-            </div>
-            <div class="card-footer-right">
-              <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
-              <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
-            </div>
-          </div>
-        </li>
+        <div class="btn-secondary show-comment-form">応援コメントする</div>
+        <div class="comment-text-area hidden">
+          <%= text_area_tag :comment_content %>
+        <div class="btn-primary add-comment-button">
+          <a href="">送信</a>
+        </div>
+        </div>
       </ul>
     </div>
   </div>
