--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <div class="outer container">
   <div class="row">
-    <%= form_with(model: [:article, @comment], local: true) do |f| %>
+    <%= form_with(model: @comment, url: article_comments_path(@article.id), local: true) do |f| %>
       <ul>
         <% @comment.errors.full_messages.each do |message| %>
           <li><%= message %></li>
