--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,35 @@
 <div class="outer container">
   <div class="row">
-    <h1 class="h3 mb-3 fw-normal">Sign up</h1>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="devise-form">
+      <h1 class="h3 mb-3 fw-normal">Sign up</h1>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="form-floating">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control' %>
-      </div>
+        <div class="form-item name">
+          <%= f.label :name %>
+          <%= f.text_field :name, placeholder: 'GAN BARU' %>
+        </div>
 
-      <div class="form-floating">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'%>
-      </div>
+        <div class="form-item email">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'ganbaru@example.com' %>
+        </div>
 
-      <div class="form-floating">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %>
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control'%>
-      </div>
+        <div class="form-item password">
+          <%= f.label :password %>
+          <%= f.password_field :password, autocomplete: "new-password", class: '' %>
+        </div>
 
-      <div class="form-floating">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'%>
-      </div>
+        <div class="form-item">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: '' %>
+        </div>
 
-      <div class="actions w-100 btn btn-lg btn-primary">
-        <%= f.submit "Sign up" %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
+        <div class="actions w-100 btn btn-lg btn-primary">
+          <%= f.submit "Sign up" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
