--- a/app/views/shared/_articles.html.erb
+++ b/app/views/shared/_articles.html.erb
@@ -3,8 +3,8 @@
     <li class="card mb-3 is-active">
       <%= link_to article_path(article) do %>
         <div class="card-body">
-          <h3 class="card-title"><%= article.title %></h3>
-          <p class="card-text"><%= article.content %></p>
+          <h3 class="card-title"><%= article.title.truncate(20) %></h3>
+          <p class="card-text"><%= article.content.truncate(40) %></p>
         </div>
         <div class="card-footer">
           <div class="card-footer-left">
