--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -1,6 +1,6 @@
 <li class="card mb-3">
   <div class="card-body">
-    <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+    <p class="card-text"><%= @comment_first.content %></p>
   </div>
   <div class="card-footer">
     <div class="card-footer-left">
