--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -1,15 +1,19 @@
-<li class="card mb-3">
-  <div class="card-body">
-    <p class="card-text"><%= @comment_first.content %></p>
-  </div>
-  <div class="card-footer">
-    <div class="card-footer-left">
-      <p>ユーザー名</p>
-      <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
-    </div>
-    <div class="card-footer-right">
-      <%= image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit' %>
-      <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
-    </div>
-  </div>
-</li>
+<ul>
+  <% @comments.each do |comment| %>
+    <li class="card mb-3">
+      <div class="card-body">
+        <p class="card-text"><%= comment.content %></p>
+      </div>
+      <div class="card-footer">
+        <div class="card-footer-left">
+          <p>ユーザー名</p>
+          <%= image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar' %>
+        </div>
+        <div class="card-footer-right">
+          <%= image_tag 'edit-icon.png',   alt: '編集ボタン', class: 'edit' %>
+          <%= image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete' %>
+        </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
