--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -7,7 +7,6 @@
         = render 'shared/article'
         = render 'shared/comment'
         - if user_signed_in? && @article
-          .btn-secondary.show-comment-form 応援コメントする
           = form_with(model: @comment, url: article_comments_path(@article.id), local: true) do |f|
             - @comment.errors.full_messages.each do |message|
               %li= message
@@ -15,6 +14,6 @@
               .mb-3
                 = f.hidden_field :user_id, :value => current_user.id
                 = f.hidden_field :article_id, :value => @article.id
-                = f.label :content
+                = f.label :応援コメントをする
                 = f.text_field :content, class: 'form-control'
               = f.submit '送信', class: "btn btn-primary"
