--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -4,8 +4,31 @@
       = link_to article_path(article) do
         .card-body
           %h3.card-title= article.title.truncate(20)
-          %p.card-text= article.content.truncate(40)
+          %p.card-text!= article.content
         .card-footer
           .card-footer-left
             %p= user_name(article)
             = image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar'
+      .bubbly-button
+        = image_tag 'heart-active.svg', class: 'like-button-img'
+        = image_tag 'heart.svg', class: 'like-button-img'
+        %span 1
+
+:javascript
+  var animateButton = function(e) {
+
+    e.preventDefault;
+    //reset animation
+    e.target.classList.remove('animate');
+
+    e.target.classList.add('animate');
+    setTimeout(function(){
+      e.target.classList.remove('animate');
+    },700);
+  };
+
+  var bubblyButtons = document.getElementsByClassName("bubbly-button");
+
+  for (var i = 0; i < bubblyButtons.length; i++) {
+    bubblyButtons[i].addEventListener('click', animateButton, false);
+  }
