--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -3,12 +3,25 @@
     - @comments.each do |comment|
       %li.card.mb-3
         .card-body
-          %p.card-text= comment.content
+          %p.card-text.comment-text= comment.content
         .card-footer
           .card-footer-left
-            %p= user_name(comment)
+            %span= user_name(comment)
             = image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar'
-          .card-footer-right
-            = image_tag 'edit-icon.png',   alt: '編集ボタン', class: 'edit'
-            = link_to article_comment_path(article_id: comment.article_id, id: comment.id), method: 'delete' do
-              = image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete'
+          - if current_user.id == comment.user_id
+            .card-footer-right
+              %a.comment-edit-wrap.show-comment-form
+                = image_tag 'edit-icon.png',   alt: '編集ボタン', class: 'edit'
+              = link_to article_comment_path(article_id: comment.article_id, id: comment.id), method: 'delete' do
+                = image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete'
+        .comment-text-area.hidden
+          = form_with(model: @comment, url: article_comments_path(@article.id), local: true) do |f|
+            - @comment.errors.full_messages.each do |message|
+              %li= message
+            .form-signin
+              .mb-3
+                = f.hidden_field :user_id, :value => current_user.id
+                = f.hidden_field :article_id, :value => @article.id
+                = f.label :編集する
+                = f.text_field :content, class: 'form-control'
+              = f.submit '送信', class: "btn btn-primary"
