--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -12,10 +12,10 @@
             .card-footer-right
               %a.comment-edit-wrap.show-comment-form
                 = image_tag 'edit-icon.png',   alt: '編集ボタン', class: 'edit'
-              = link_to article_comment_path(article_id: comment.article_id, id: comment.id), method: 'delete' do
+              = link_to article_comment_path(comment.article_id, comment.id), method: 'delete' do
                 = image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete'
         .comment-text-area.hidden
-          = form_with(model: @comment, url: article_comments_path(@article.id), local: true) do |f|
+          = form_with(model: comment, url: article_comment_path(@article.id, comment.id), local: true) do |f|
             - @comment.errors.full_messages.each do |message|
               %li= message
             .form-signin
