--- a/app/views/shared/_article.html.haml
+++ b/app/views/shared/_article.html.haml
@@ -3,6 +3,13 @@
     .card-body
       %h3.card-title= @article.title
       %p.card-text!= @article.content
+      .link-btn-wrapper
+        = button_to article_likes_path(@article), class: 'bubbly-button' do
+          - if @article.likes_count == 0
+            = image_tag 'heart.svg', class: 'like-button-img'
+          - else
+            = image_tag 'heart-active.svg', class: 'like-button-img'
+        %span= @likes
     .card-footer
       .card-footer-left
         %p= user_name(@article)
@@ -13,13 +20,6 @@
             = image_tag 'edit-icon.png', alt: '編集ボタン', class: 'edit'
           = link_to article_path(@article), data: {method: 'delete', confirm: '削除しますか？'} do
             = image_tag 'delete-icon.png', alt: '削除ボタン', class: 'delete'
-    = button_to article_likes_path(@article), class: 'bubbly-button' do
-      - if @article.likes_count == 0
-        = image_tag 'heart.svg', class: 'like-button-img'
-      - else
-        = image_tag 'heart-active.svg', class: 'like-button-img'
-    %span= @likes
-
 
 :javascript
   var animateButton = function(e) {
