--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -5,16 +5,17 @@
         .card-body
           %h3.card-title= article.title.truncate(20)
           %p.card-text!= article.content
+          .link-btn-wrapper
+            .like-btn
+              - if article.likes_count == 0
+                = image_tag 'heart.svg', class: 'like-button-img'
+              - else
+                = image_tag 'heart-active.svg', class: 'like-button-img'
+            %span= article.likes_count
         .card-footer
           .card-footer-left
             %p= user_name(article)
             = image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar'
-      .bubbly-button
-        - if article.likes_count == 0
-          = image_tag 'heart.svg', class: 'like-button-img'
-        - else
-          = image_tag 'heart-active.svg', class: 'like-button-img'
-      %span= article.likes_count
 
 :javascript
   var animateButton = function(e) {
