--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -17,3 +17,5 @@
                 = f.label :応援コメントをする
                 = f.text_field :content, class: 'form-control'
               = f.submit '送信', class: "btn btn-primary"
+
+= javascript_pack_tag 'like'
