--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,16 +6,10 @@
       .home-right.col-8
         = render 'shared/article'
         = render 'shared/comment'
+        .comments-container
         - if user_signed_in? && @article
-          = form_with(model: @comment, url: article_comments_path(@article.id), local: true) do |f|
-            - @comment.errors.full_messages.each do |message|
-              %li= message
-            .form-signin
-              .mb-3
-                = f.hidden_field :user_id, :value => current_user.id
-                = f.hidden_field :article_id, :value => @article.id
-                = f.label :応援コメントをする
-                = f.text_field :content, class: 'form-control'
-              = f.submit '送信', class: "btn btn-primary"
+          .container
+            = text_area_tag :comment_content_text, '', class: 'form-control'
+            .btn.btn-primary.add-comment-button 応援する
 
 = javascript_pack_tag 'like'
