--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -222,9 +222,9 @@ th {
 
 body {
   background-color: #fafafa;
-  // background-color: #f4f4ff;
   line-height: 1.5;
   font-family: 'Roboto', 'Noto Sans JP', sans-serif;
+  color: #454545;
 }
 
 main img {
