--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -9,6 +9,7 @@
   label {
     display: block;
     font-size: 16px;
+    padding-bottom: 4px;
   }
 
   input {
@@ -26,4 +27,9 @@
 .actions input[type="submit"] {
   display: block;
   width: 100%;
+}
+
+.devise-link {
+  padding-top: 6px;
+  display: inline-block;
 }
