--- a/app/views/articles/archives.html.haml
+++ b/app/views/articles/archives.html.haml
@@ -1,5 +1,6 @@
 - if @articles
   .conteiner.articles.outer
+    %h1.archives-heading みんなの目標一覧
     %ul.row
       - @articles.each do |article|
         %li.card.mb-3.is-active
