--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -6,9 +6,9 @@
           %li= message
       .form-signin
         .mb-3
-          = f.label :title, class: 'form-label'
+          = f.label :タイトル, class: 'form-label'
           = f.text_field :title, class: 'form-control'
         .mb-3
-          = f.label :content
-          = f.rich_text_area :content, class: 'form-control'
-        = f.submit '送信', class: "btn btn-primary"
+          = f.label :内容
+          = f.rich_text_area :content, class: 'form-control rich-text-area'
+        = f.submit '送信する', class: "btn-blue-bc"
