--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -10,6 +10,6 @@
         - if user_signed_in? && @article
           .form-container
             = text_area_tag :comment_content_text, '', class: 'form-control'
-            .btn.btn-primary.add-comment-button#user-name{data: {user_id: current_user.name}} 応援する
+            .btn-blue-bc.add-comment-button#user-name{data: {user_id: current_user.name}} 応援する
 
 = javascript_pack_tag 'like'
