--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,8 +1,8 @@
 - if controller_name != 'sessions'
-  = link_to "Log in", new_session_path(resource_name)
+  = link_to "ログイン", new_session_path(resource_name), class: 'devise-link'
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Sign up", new_registration_path(resource_name)
+  = link_to "アカウント作成", new_registration_path(resource_name), class: 'devise-link'
   %br/
 %br/
 %br/
