--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -19,10 +19,9 @@
             = form_with(model: comment, url: article_comment_path(@article.id, comment.id), local: true) do |f|
               - @comment.errors.full_messages.each do |message|
                 %li= message
-              .form-signin
-                .mb-3
+              .form-edit-comment
+                %div
                   = f.hidden_field :user_id, :value => current_user.id
                   = f.hidden_field :article_id, :value => @article.id
-                  = f.label :編集する
-                  = f.text_field :content, class: 'form-control'
-                = f.submit '送信', class: "btn btn-primary"
+                  = f.text_area :content, class: 'form-control'
+                = f.submit '編集する', class: "btn-blue-bc"
