プロフィールページの作成

--- a/app/views/articles/archives.html.haml
+++ b/app/views/articles/archives.html.haml
@@ -18,4 +18,4 @@
             .card-footer
               .card-footer-left
                 %p= user_name(article)
-                = image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar'
+                = image_tag 'default-icon.png', alt: 'アイコン', class: 'avatar'
