--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,8 @@
             %a#dropdownUser1.d-block.link-dark.text-decoration-none.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#"}
               = image_tag 'default-icon.png', alt: 'デフォルトアイコン', class: 'rounded-circle header-dropdown-icon'
             %ul.dropdown-menu.text-small{"aria-labelledby" => "dropdownUser1"}
-              %li= link_to "プロフィール", users_show_path, class: 'dropdown-item'
+              %li= link_to "プロフィール", profile_path, class: 'dropdown-item'
+              %li= link_to "アカウント設定", edit_user_registration_path, class: 'dropdown-item'
               %li
                 %hr.dropdown-divider/
               %li= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'dropdown-item'
