いいね！のランキングページを作成する

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,6 +5,7 @@
         %ul.nav.col-12.col-lg-auto.me-lg-auto.mb-2.justify-content-center.mb-md-0
           %li= link_to 'ホーム', root_path, class: 'nav-link link-dark px-2'
           %li= link_to '目標を投稿してみる', new_article_path, class: 'nav-link link-dark px-2'
+          %li= link_to 'がんばったーランキング TOP 3', new_rank_path, class: 'nav-link link-dark px-2'
         - if user_signed_in?
           .dropdown.text-end
             %a#dropdownUser1.d-block.link-dark.text-decoration-none.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#"}
