--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -6,8 +6,9 @@
           %p.card-text.comment-text= comment.content
         .card-footer
           .card-footer-left
-            %span= user_name(comment)
-            = image_tag 'default-icon.png', alt: 'デフォルトアバター画像', class: 'avatar'
+            %span= bot_name(comment) || user_name(comment)
+            -# image_tagのsrcは要修正 2022.01.10
+            = image_tag comment.img || 'default-icon.png', alt: 'アバター画像', class: 'avatar'
           - if user_signed_in? && (current_user.id == comment.user_id)
             .card-footer-right
               %a.comment-edit-wrap.show-comment-form
