modified avatar_image of artcile

--- a/app/views/articles/archives.html.haml
+++ b/app/views/articles/archives.html.haml
@@ -19,5 +19,5 @@
             .card-footer
               .card-footer-left
                 %p= user_name(article)
-                = image_tag 'default-icon.png', alt: 'アイコン', class: 'avatar'
+                = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
     = will_paginate
