--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -15,4 +15,4 @@
         .card-footer
           .card-footer-left
             %p= user_name(article)
-            = image_tag 'default-icon.png', alt: 'アイコン', class: 'avatar'
+            = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
