--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,7 @@
     .container
       .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-lg-start
         %ul.nav.col-12.col-lg-auto.me-lg-auto.mb-2.justify-content-center.mb-md-0
+          %li 頑張ったー
           %li= link_to 'ホーム', root_path, class: 'nav-link link-dark px-2'
           %li= link_to 'みんなの目標一覧', archives_path, class: 'nav-link link-dark px-2'
           %li= link_to '目標を投稿してみる', new_article_path, class: 'nav-link link-dark px-2'
