--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -1,12 +1,12 @@
 %ul
   - if @article
-    - @comments.each_with_index do |comment, num|
+    - @comments.each do |comment|
       %li.card.mb-3.comment-card
         .card-body
           %p.card-text.comment-text= comment.content
         .card-footer
           .card-footer-left
-            %span= bot_name(comment) || user_name(comment)
+            %p= bot_name(comment) || user_nickname(comment) || user_name(comment)
             -# image_tagのsrcは要修正 2022.01.10
             = image_tag comment.img || comment.user.avatar_image, alt: 'アバター画像', class: 'avatar'
           - if user_signed_in? && (current_user.id == comment.user_id) && comment.bot_id.zero?
