--- a/app/views/shared/_article.html.haml
+++ b/app/views/shared/_article.html.haml
@@ -12,7 +12,7 @@
         %span{id: "likes-#{@article.id}"}= @likes
     .card-footer
       .card-footer-left
-        %p= user_nickname(@article) || user_name(@article)
+        %p= nickname_or_name(@article)
         = image_tag @article.user.avatar_image, alt: 'アイコン', class: 'avatar'
       - if user_signed_in? && current_user.articles.exists?(id: @article.id)
         .card-footer-right
