ロゴを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,11 @@
 @import 'like-btn';
 @import 'profiles';
 
+.logo {
+  display: block;
+  margin-right: 12px;
+}
+
 .archives-heading {
   display: inline-block;
   font-size: 32px;
