--- a/app/views/shared/_articles.html.haml
+++ b/app/views/shared/_articles.html.haml
@@ -14,5 +14,7 @@
             %span{id: "article-likes-#{article.id}"}= article.likes_count
         .card-footer
           .card-footer-left
-            %p= nickname_or_name(article)
+            %p= nickname_or_name(article) 
+            / card-footer-left is not working (right-aligned)
+            /= link_to user_path(@article.user_id) do
             = image_tag article.user.avatar_image, alt: 'アイコン', class: 'avatar'
