--- a/app/assets/stylesheets/_pagenate.scss
+++ b/app/assets/stylesheets/_pagenate.scss
@@ -5,7 +5,7 @@ ul.pagination {
     font-size: 18px;
     width: 40px;
     height: 40px;
-    background-color: #FFC778;
+    background-color: #fd9535;
     border-radius: 8px;
     display: flex;
     justify-content: center;
