--- a/app/views/articles/archives.html.haml
+++ b/app/views/articles/archives.html.haml
@@ -16,6 +16,7 @@
                   - else
                     = image_tag 'heart-active.svg', class: 'like-button-img'
                 %span= article.likes_count
+              %p.card-time-text= "#{time_ago_in_words(article.created_at)}前"
             .card-footer
               .card-footer-left
                 %p= nickname_or_name(article)
